SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.2/kdepim/; revision=910005

--- a/kcmconfigs/korganizer_configviews.desktop
+++ b/kcmconfigs/korganizer_configviews.desktop
@@ -36,7 +36,7 @@ Name[he]=תצוגות
 Name[hu]=Nézetek
 Name[is]=Sýn
 Name[it]=Viste
-Name[ja]=ビューア
+Name[ja]=ビュー
 Name[ka]=ხედები
 Name[kk]=Көріністері
 Name[km]=ទិដ្ឋភាព
@@ -93,7 +93,7 @@ Comment[gl]=Configuración da Vista do KOrganizer
 Comment[hu]=KOrganizer nézeti beállítások
 Comment[is]=Stillingar KOrganizer sýna
 Comment[it]=Configurazione viste di KOrganizer
-Comment[ja]=KOrganizer ビューアの設定
+Comment[ja]=KOrganizer ビューの設定
 Comment[ka]=KOrganizer  ხედის კონფიგურაცია
 Comment[kk]=KOrganizer-дің көрінісінің параметрлері
 Comment[km]=ការ​កំណត់​រចនាសម្ព័ន្ធ​ទិដ្ឋភាព​របស់ KOrganizer
