SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.2/kdepim/; revision=910467

--- a/interfaces/calendar/calendardecoration.desktop
+++ b/interfaces/calendar/calendardecoration.desktop
@@ -18,6 +18,7 @@ Name[nb]=Calendar dekorasjonsgrensesnitt
 Name[nds]=Kalennerdekoratschoon-Koppelsteed
 Name[nl]=Agendadecoratie-uiterlijk
 Name[nn]=Grensesnitt til kalenderpynt
+Name[pa]=ਕੈਲੰਡਰ ਸਜਾਵਟ ਇੰਟਰਫੇਸ
 Name[pl]=Interfejs do dekoracji kalendarza
 Name[pt]=Interface de Decoração do Calendário
 Name[pt_BR]=Interface de decoração do calendário
