--- a/plugins/printing/journal/journalprint.desktop
+++ b/plugins/printing/journal/journalprint.desktop
@@ -78,7 +78,7 @@ Comment[nb]=Med dette programtillegget kan du skrive ut oppføringer (dagsnotate
 Comment[nds]=Mit dit Moduul köönt Daagbook-Indrääg utdruckt warrn.
 Comment[ne]=यो प्लगइनले तपाईँलाई जर्नल प्रविष्टि मुद्रण गर्न अनुमति दिन्छ (दैनिक विवरण प्रविष्टि) ।
 Comment[nl]=Deze plugin maakt het mogelijk om journalen uit te printen (dagboekitems).
-Comment[nn]=Dette programtillegget lèt deg skriva ut dagbokoppføringar.
+Comment[nn]=Dette programtillegget lèt deg skriva ut dagboktekstar.
 Comment[pl]=Ta wtyczka pozwala drukować wpisy dziennika.
 Comment[pt]=Este diário permite-lhe imprimir os itens de diário.
 Comment[pt_BR]=Este plug-in permite-lhe imprimir entradas de diário.
