--- a/plugins/thisdayinhistory/thisdayinhistory.desktop
+++ b/plugins/thisdayinhistory/thisdayinhistory.desktop
@@ -42,6 +42,7 @@ Comment[gl]=Este engadido fornece ligazóns ás páxinas "Este Dí­a na Histori
 Comment[ja]=Wikipedia の「今日は何の日」へのリンクを提供します。
 Comment[km]=កម្មវិធី​នេះ ផ្ដល់​នូវ​តំណ​ទៅ​កាន់​ទំព័រ​នៃ​ប្រវត្តិ​ថ្ងៃ​នេះ​របស់ Wikipedia
 Comment[ko]=이 플러그인은 위키백과의 '오늘의 역사' 페이지로 가는 링크를 제공합니다
+Comment[lv]=Šis spraudnis pievieno saites uz Vikipēdijas 'Šī diena vēsturē' lapām
 Comment[nds]=Dit Moduul stellt Links na de »Disse Dag in de Historie«-Sieden op Wikipedia praat
 Comment[nl]=Deze plugin levert links tot de Wikipedia-pagina's over een bepaalde dag
 Comment[nn]=Dette programtillegget gjev lenkjer til «Dagen i dag» i Wikipedia
