--- a/interfaces/calendar/calendarplugin.desktop
+++ b/interfaces/calendar/calendarplugin.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Name=Calendar Plugin Interface
 Name[ca]=Interfície de connector del calendari
+Name[cs]=Rozhraní modulu kalendáře
 Name[da]=Kalenders plugin-grænseflade
 Name[de]=Kalender-Modulschnittstelle
 Name[el]=Διασύνδεση προσθέτου ημερολογίου
