--- a/interfaces/korganizer/korganizerpart.desktop
+++ b/interfaces/korganizer/korganizerpart.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Name=KOrganizer Part Interface
 Name[ca]=Interfície de part del KOrganizer
+Name[cs]=Rozhraní komponenty KOrganizeru
 Name[da]=Grænseflade til KOrganizer Part
 Name[de]=KOrganizer-Komponenten-Schnittstelle
 Name[el]=Διασύνδεση KOrganizer Part
