--- a/interfaces/korganizer/korgprintplugin.desktop
+++ b/interfaces/korganizer/korgprintplugin.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Name=KOrganizer Print Plugin Interface
 Name[ca]=Interfície de connector d'impressió del KOrganizer
+Name[cs]=Tiskové rozhraní komponenty KOrganizeru
 Name[da]=Grænseflade til KOrganizer print-plugin
 Name[de]=KOrganizer-Druckschnittstelle
 Name[el]=Διασύνδεση προσθέτου εκτύπωσης KOrganizer
