--- a/kcmconfigs/korganizer_configtime.desktop
+++ b/kcmconfigs/korganizer_configtime.desktop
@@ -15,6 +15,7 @@ X-KDE-Weight=200
 Name=Time and Date
 Name[bg]=Дата и час
 Name[ca]=Hora i data
+Name[cs]=Datum a čas
 Name[da]=Tid og dato
 Name[de]=Zeit und Datum
 Name[el]=Ώρα και Ημερομηνία
@@ -50,6 +51,7 @@ Name[zh_TW]=時間與日期
 Comment=KOrganizer Time and Date Configuration
 Comment[bg]=Настройване на дата и час за KOrganizer
 Comment[ca]=Configuració de la data i hora al KOrganizer
+Comment[cs]=Nastavení data a času pro KOrganizer
 Comment[da]=Konfiguration af tid og dato for KOrganizer
 Comment[de]=KOrganizer-Einstellungen für Zeit/Datum
 Comment[el]=Ρύθμιση ώρας και ημερομηνίας του KOrganizer
