--- a/plugins/hebrew/hebrew.desktop
+++ b/plugins/hebrew/hebrew.desktop
@@ -54,6 +54,7 @@ Name[zh_TW]=猶太行事曆外掛程式
 Comment=Shows all dates in KOrganizer also in the Jewish calendar system.
 Comment[bg]=Приставката служи за показване на датите според еврейския календар.
 Comment[ca]=Mostra totes les dates en el KOrganizer també en el sistema del calendari jueu.
+Comment[cs]=Zobrazení všech dat v KOrganizeru také v židovském kalendáři.
 Comment[da]=Viser alle datoer i KOrganizer - også i det jødiske kalendersystem.
 Comment[de]=Zeigt alle Daten in KOrganizer auch im jüdischen Kalendarium an.
 Comment[el]=Εμφανίζει όλες τις ημερομηνίες στο korganizer και στο εβραϊκό ημερολογιακό σύστημα.
