--- a/kcmconfigs/korganizer_configcolorsandfonts.desktop
+++ b/kcmconfigs/korganizer_configcolorsandfonts.desktop
@@ -14,6 +14,7 @@ X-KDE-Weight=400
 
 Name=Colors and Fonts
 Name[ca]=Colors i tipus de lletra
+Name[cs]=Barvy a písma
 Name[da]=Farver og skrifttyper
 Name[de]=Farben und Schriftarten
 Name[el]=Χρώματα και γραμματοσειρές
@@ -47,6 +48,7 @@ Name[zh_CN]=颜色和字体
 Name[zh_TW]=顏色與字型
 Comment=KOrganizer Colors and Fonts Configuration
 Comment[ca]=Configuració de colors i tipus de lletra del KOrganizer
+Comment[cs]=Nastavení barev a písem KOrganizeru
 Comment[da]=Konfiguration af farver og skrifttyper for KOrganizer
 Comment[de]=Farb- und Schriftdarstellung für KOrganizer
 Comment[el]=Ρύθμιση χρωμάτων και γραμματοσειρών του KOrganizer
