--- a/plugins/picoftheday/picoftheday.desktop
+++ b/plugins/picoftheday/picoftheday.desktop
@@ -3,6 +3,7 @@ X-KDE-Library=korg_picoftheday
 Name=Wikipedia Picture Of the Day Plugin for Calendars
 Name[bg]=Приставка на календара за дати и смятане с дати
 Name[ca]=Connector d'imatge del dia de la Viquipèdia per als calendaris
+Name[cs]=Wikipedia modul 'Obrázek dne' pro kalendáře
 Name[da]=Wikipedia dagens billede-plugin for kalendere
 Name[de]=Bild des Tages aus Wikipedia für den Kalender
 Name[el]=Πρόσθετο εικόνας της ημέρας της Wikipedia για Ημερολόγια
