--- a/plugins/thisdayinhistory/thisdayinhistory.desktop
+++ b/plugins/thisdayinhistory/thisdayinhistory.desktop
@@ -2,6 +2,7 @@
 X-KDE-Library=korg_thisdayinhistory
 Name=Wikipedia 'This Day in History' Plugin
 Name[ca]=Connector d'imatge del dia de la Viquipèdia
+Name[cs]=Wikipedia modul 'Tento den v historii'
 Name[da]=Wikipedias 'denne dag i historien'-plugin
 Name[de]=Wikipedia-Modul „Dieser Tag in der Geschichte“
 Name[el]=Πρόσθετο 'Αυτή η ημέρα στην Ιστορία' της Wikipedia
