fix "D-Bus" spelling
svn path=/trunk/KDE/kdepim/; revision=912054

--- a/dbuscalendar.desktop
+++ b/dbuscalendar.desktop
@@ -16,7 +16,7 @@ Name[x-test]=xxDBUSCalendarxx
 Name[zh_TW]=DBUS行事曆
 Type=ServiceType
 X-KDE-ServiceType=DBUS/Organizer
-Comment=Organizer with a D-BUS interface
+Comment=Organizer with a D-Bus interface
 Comment[bg]=Организатор с поддръжка на интерфейс D-BUS
 Comment[ca]=Organitzador amb una interfície DBUS
 Comment[da]=Organisator med en D-BUS-grænseflade
