SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.2/kdepim/; revision=912443

--- a/dbuscalendar.desktop
+++ b/dbuscalendar.desktop
@@ -29,7 +29,7 @@ Comment[fa]=سازمان‌دهنده با یک واسط D-BUS
 Comment[fr]=Agenda avec une interface D-Bus
 Comment[ga]=Eagraí le comhéadan D-BUS
 Comment[gl]=Organizador con interface D-BUS
-Comment[it]=Organizer con un'interfaccia D-Bus
+Comment[it]=Agenda con un'interfaccia D-Bus
 Comment[ja]=D-Bus インターフェースを持つカレンダー
 Comment[kk]=D-BUS интерфейсті Ұйымдастырғыш
 Comment[km]=កម្មវិធី​រៀបចំ​ដែល​មាន​ចំណុច​ប្រទាក់ D-BUS
