--- a/interfaces/korganizer/korganizerpart.desktop
+++ b/interfaces/korganizer/korganizerpart.desktop
@@ -10,7 +10,7 @@ Name[et]=KOrganizeri komponendi liides
 Name[fr]=Interface de composant KOrganizer
 Name[ga]=Comhéadan Comhpháirte KOrganizer
 Name[gl]=Interface da Parte KOrganizer
-Name[it]=Interfaccia della parte di Korganizer
+Name[it]=Interfaccia del componente di KOrganizer
 Name[ja]=KOrganizer コンポーネントのインターフェース
 Name[km]=ចំណុច​ប្រទាក់​ផ្នែក​របស់ KOrganizer
 Name[ko]=KOrganizer 부분 인터페이스
@@ -51,7 +51,7 @@ Comment[he]=רכיב KOrganizer
 Comment[hr]=KOrganizer komponenta
 Comment[hu]=KOrganizer objektum
 Comment[is]=KOrganizer hluti
-Comment[it]=Parte di KOrganizer
+Comment[it]=Componente di KOrganizer
 Comment[ja]=KOrganizer コンポーネント
 Comment[ka]=KOrganizer კომპონენტი
 Comment[kk]=KOrganizer бөлшегі
