--- a/kcmconfigs/korganizer_configplugins.desktop
+++ b/kcmconfigs/korganizer_configplugins.desktop
@@ -34,7 +34,7 @@ Name[gl]=Engadidos
 Name[he]=תוספים
 Name[hu]=Bővítőmodulok
 Name[is]=Íforrit
-Name[it]=Plugin
+Name[it]=Estensioni
 Name[ja]=プラグイン
 Name[ka]=მოდულები
 Name[kk]=Плагин модульдері
@@ -89,7 +89,7 @@ Comment[gl]=Configuración dos Engadidos do KOrganizer
 Comment[he]=הגדרות תוסף הארגונית
 Comment[hu]=A KOrganizer bővítőmodul beállításai
 Comment[is]=Stillingar KOrganizer íforrita
-Comment[it]=Configurazione plugin KOrganizer
+Comment[it]=Configurazione estensioni KOrganizer
 Comment[ja]=KOrganizer プラグインの設定
 Comment[ka]=KOrganizer მოდულების კონფიგურაცია
 Comment[kk]=KOrganizer-дің плагин модульдерінің параметрлері
