--- a/plugins/printing/journal/journalprint.desktop
+++ b/plugins/printing/journal/journalprint.desktop
@@ -65,7 +65,7 @@ Comment[ga]=Leis an mbreiseán seo is féidir leat iontrálacha dialainne a phri
 Comment[gl]=Este engadido permite imprimir as entradas do diario.
 Comment[hu]=Ez a modul naplóbejegyzések kinyomtatását teszi lehetővé.
 Comment[is]=Þetta íforrit gerir þér kleyft að prenta út dagbókarfærslur.
-Comment[it]=Questo plugin ti permette di stampare le registrazioni del diario.
+Comment[it]=Questa estensione ti permette di stampare le voci del diario.
 Comment[ja]=このプラグインにより、日記のエントリを印刷できるようになります。
 Comment[ka]=ეს მოდული საშუალებას გაძლევთ ამობეჭდოთ ჟურნალის შემადგენლობა (დღიურის ელემენტები)
 Comment[kk]=Бұл күнделіктің жазуларын басып шығаратын модулі.
