--- a/interfaces/calendar/calendardecoration.desktop
+++ b/interfaces/calendar/calendardecoration.desktop
@@ -57,7 +57,7 @@ Comment[he]=תוסף קישוטי לוח שנה
 Comment[hr]=Dodatak za dekoraciju kalendara
 Comment[hu]=Naptármegjelenési bővítőmodul
 Comment[is]=Íforrit til að skreyta texta dagatals
-Comment[it]=Plugin di decorazione del calendario
+Comment[it]=Estensione di decorazione del calendario
 Comment[ja]=カレンダー装飾プラグイン
 Comment[ka]=კალენდრის გაფორმების მოდული
 Comment[kk]=Күнтізбені безендіру модулі
