--- a/interfaces/calendar/calendarplugin.desktop
+++ b/interfaces/calendar/calendarplugin.desktop
@@ -10,7 +10,7 @@ Name[et]=Kalendriplugina liides
 Name[fr]=Interface de module d'agenda
 Name[ga]=Comhéadan Breiseáin Féilire
 Name[gl]=Interface do Engadido do Calendario
-Name[it]=Interfaccia del plugin calendario
+Name[it]=Interfaccia dell'estensione calendario
 Name[ja]=カレンダープラグインインターフェース
 Name[km]=ប្រតិទិន​កម្មវិធី​ជំនួយ​ប្រតិទិន
 Name[ko]=달력 플러그인 인터페이스
@@ -57,7 +57,7 @@ Comment[he]=תוסף לוח שנה
 Comment[hr]=Kalendar dodatak
 Comment[hu]=Naptárkezelő bővítőmodul
 Comment[is]=Dagatals íforrit
-Comment[it]=Plugin calendario
+Comment[it]=Estensione calendario
 Comment[ja]=カレンダープラグイン
 Comment[ka]=კალენდრის მოდული
 Comment[kk]=Күнтізбе модулі
