--- a/interfaces/korganizer/korgprintplugin.desktop
+++ b/interfaces/korganizer/korgprintplugin.desktop
@@ -10,7 +10,7 @@ Name[et]=KOrganizeri trükkimisplugina liides
 Name[fr]=Interface de module d'impression d'agenda
 Name[ga]=Comhéadan Breiseáin Priontála KOrganizer
 Name[gl]=Interface do Engadido de Impresión de KOrganizer
-Name[it]=Interfaccia del plugin di stampa di KOrganizer
+Name[it]=Interfaccia dell'estensione di stampa di KOrganizer
 Name[ja]=KOrganizer 印刷プラグインインターフェース
 Name[km]=ចំណុច​ប្រទាក់​កម្មវិធី​ជំនួយ​​បោះពុម្ព KOrganizer
 Name[ko]=KOrganizer 인쇄 플러그인 인터페이스
@@ -50,7 +50,7 @@ Comment[he]=רכיב KOrganizer
 Comment[hr]=KOrganizer komponenta
 Comment[hu]=KOrganizer objektum
 Comment[is]=KOrganizer hluti
-Comment[it]=Parte di KOrganizer
+Comment[it]=Componente di KOrganizer
 Comment[ja]=KOrganizer コンポーネント
 Comment[ka]=KOrganizer კომპონენტი
 Comment[kk]=KOrganizer бөлшегі
