--- a/kcmconfigs/korganizer_configcolorsandfonts.desktop
+++ b/kcmconfigs/korganizer_configcolorsandfonts.desktop
@@ -24,7 +24,7 @@ Name[fi]=Värit ja kirjasimet
 Name[fr]=Couleurs et polices
 Name[ga]=Dathanna agus Clónna
 Name[gl]=Cores e Tipos de letra
-Name[it]=Colori e tipi di carattere
+Name[it]=Colori e caratteri
 Name[ja]=色とフォント
 Name[km]=ពណ៌ និង​ពុម្ពអក្សរ
 Name[ko]=색과 글꼴
@@ -59,7 +59,7 @@ Comment[fi]=KOrganizer värien asetukset
 Comment[fr]=Configuration des couleurs et des polices de KOrganizer
 Comment[ga]=Cumraíocht na nDathanna/gClónna le haghaidh KOrganizer
 Comment[gl]=Configuración das Cores e os Tipos de Letra do KOrganizer
-Comment[it]=Configurazione dei colori e dei tipi di carattere di KOrganizer
+Comment[it]=Configurazione dei colori e dei caratteri di KOrganizer
 Comment[ja]=KOrganizer 色とフォントの設定
 Comment[km]=ការ​កំណត់​រចនាសម្ព័ន្ធ​ពុម្ពអក្សរ និង​ពណ៌ KOrganizer
 Comment[ko]=KOrganizer 색과 글꼴 설정
