--- a/plugins/printing/list/listprint.desktop
+++ b/plugins/printing/list/listprint.desktop
@@ -64,7 +64,7 @@ Comment[fr]=Ce module vous permet d'imprimer les évènements et les tâches sou
 Comment[gl]=Este engadido permi­te imprimir os eventos e as tarefas en forma de listaxe.
 Comment[hu]=Ezzel a modullal listaként kinyomtathatók a feladatok és események.
 Comment[is]=Þetta íforrit gerir þér kleyft að prenta út lista með atburðum og verkþáttum.
-Comment[it]=Questo plugin ti permette di stampare eventi e cose da fare in modalità elenco.
+Comment[it]=Questa estensione ti permette di stampare eventi e cose da fare in modalità elenco.
 Comment[ja]=このプラグインにより、リストフォーム内のイベントや To-Do を印刷できるようになります。
 Comment[ka]=ეს მოდული საშუალებას გაძლევთ სიის ფორმით ამობეჭდოთ მოვლენები და დავალებები.
 Comment[kk]=Бұл оқиғалар мен жоспарларды тізім түрінде басатын модулі.
