--- a/plugins/printing/whatsnext/whatsnextprint.desktop
+++ b/plugins/printing/whatsnext/whatsnextprint.desktop
@@ -63,7 +63,7 @@ Comment[fr]=Ce module vous permet d'imprimer la liste des prochaines évènement
 Comment[gl]=Este engadido permite imprimir unha listaxe de todos os eventos e tarefas vindeiros.
 Comment[hu]=Ezzel a modullal kinyomtathatók a rövidesen aktuálissá váló feladatok és események.
 Comment[is]=Þetta íforrit gerir þér kleyft að prenta út lista yfir alla væntanlega atburði og verkþætti.
-Comment[it]=Questo plugin vi permette di stampare una lista dei prossimi eventi e cose da fare.
+Comment[it]=Questa estensione ti permette di stampare una lista dei prossimi eventi e cose da fare.
 Comment[ja]=このプラグインにより、将来のすべてのイベントや To-Do のリストを印刷できるようになります。
 Comment[ka]=ეს  მოდული საშუალებას გაძლევთ ამობეჭდოთ მომავალი მოვლენები და დავალებები.
 Comment[kk]=Бұл болашақ оқиғалар мен жоспарлар тізімін басып шығаратын модулі.
