--- a/plugins/printing/year/yearprint.desktop
+++ b/plugins/printing/year/yearprint.desktop
@@ -58,7 +58,7 @@ Comment[fr]=Ce module vous permet d'imprimer l'ensemble de l'année
 Comment[fy]=Comment=Dizze plugin makket it mooglik om in jierkalinder Ãºt te printsjen.
 Comment[gl]=Este engadido permite imprimir un calendario anual.
 Comment[hu]=Ez a modul egy egész éves naptár kinyomtatását teszi lehetővé.
-Comment[it]=Questo plugin ti permette di stampare un calendario annuale.
+Comment[it]=Questa estensione ti permette di stampare un calendario annuale.
 Comment[ja]=このプラグインにより、年単位のカレンダーを印刷できるようになります。
 Comment[kk]=Бұл жылдық күнтізбені басып шығаратын модулі.
 Comment[km]=កម្មវិធី​ជំនួយ​នេះ​អនុញ្ញាត​ឲ្យ​អ្នក​បោះពុម្ព​​ប្រតិទិន​ប្រចាំ​ឆ្នាំ ។
