SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.2/kdepim/; revision=913554

--- a/interfaces/korganizer/korganizerpart.desktop
+++ b/interfaces/korganizer/korganizerpart.desktop
@@ -19,6 +19,7 @@ Name[nb]=KOrganizer Part-grensesnitt
 Name[nds]=KOrganizer-Komponent-Koppelsteed
 Name[nl]=KOrganizer-componentuiterlijk
 Name[nn]=Grensesnitt til KOrganizer-del
+Name[pa]=ਕੇ-ਪਰਬੰਧਕ ਭਾਗ ਇੰਟਰਫੇਸ
 Name[pl]=Moduł KOrganizera
 Name[pt]=Interface de Componente do KOrganizer
 Name[pt_BR]=Interface do componente do KOrganizer
@@ -65,6 +66,7 @@ Comment[nds]=KOrganizer-Komponent
 Comment[ne]=केडीई आयोजक भाग
 Comment[nl]=KOrganizer-component
 Comment[nn]=KOrganizer-del
+Comment[pa]=ਕੇ-ਪਰਬੰਧਕ ਭਾਗ
 Comment[pl]=Moduł KOrganizera
 Comment[pt]=Componente do KOrganizer
 Comment[pt_BR]=Componente do KOrganizer
