--- a/interfaces/korganizer/korgprintplugin.desktop
+++ b/interfaces/korganizer/korgprintplugin.desktop
@@ -19,6 +19,7 @@ Name[nb]=KOrganizer grensesnitt for utskrifts-programtillegg
 Name[nds]=KOrganizer-Druckmoduul-Koppelsteed
 Name[nl]=KOrganizer-printpluginuiterlijk
 Name[nn]=Grensesnitt til utskriftsprogramtillegg til KOrganizer
+Name[pa]=ਕੇ-ਪਰਬੰਧਕ ਪਰਿੰਟ ਪਲੱਗਇਨ ਸੰਰਚਨਾ
 Name[pl]=Interfejs wtyczki drukowania KOrganizera
 Name[pt]=Interface do 'Plugin' de Impressão do KOrganizer
 Name[pt_BR]=Interface do plug-in de impressão do KOrganizer
@@ -64,6 +65,7 @@ Comment[nds]=KOrganizer-Komponent
 Comment[ne]=केडीई आयोजक भाग
 Comment[nl]=KOrganizer-component
 Comment[nn]=KOrganizer-del
+Comment[pa]=ਕੇ-ਪਰਬੰਧਕ ਭਾਗ
 Comment[pl]=Moduł KOrganizera
 Comment[pt]=Componente do KOrganizer
 Comment[pt_BR]=Componente do KOrganizer
