--- a/kcmconfigs/korganizer_configviews.desktop
+++ b/kcmconfigs/korganizer_configviews.desktop
@@ -107,6 +107,7 @@ Comment[nds]=Ansichteninstellen för KOrganizer
 Comment[ne]=केडीई आयोजक दृश्य कन्फिगरेसन
 Comment[nl]=KOrganizer weergave instellen
 Comment[nn]=Visingsoppsett for KOrganizer
+Comment[pa]=ਕੇ-ਪਰਬੰਧਕ ਵੇਖੋ ਸੰਰਚਨਾ
 Comment[pl]=Konfiguracja widoków KOrganizera
 Comment[pt]=Configuração das Janelas do KOrganizer
 Comment[pt_BR]=Configuração de visualizações do KOrganizer
