--- a/plugins/picoftheday/picoftheday.desktop
+++ b/plugins/picoftheday/picoftheday.desktop
@@ -23,6 +23,7 @@ Name[nds]=Wikipedia-"Bild för Vundaag"-Moduul för Kalenners
 Name[ne]=क्यालेन्डरका लागि दिनको प्लगइनको विकिपेडिया तस्वीर
 Name[nl]=KOrganizer-plugin voor de Wikipedia Afbeelding van de Dag
 Name[nn]=Kalender-programtillegg for dagens bilete frå Wikipedia
+Name[pa]=ਕੈਲੰਡਰ ਲਈ ਦਿਨ ਦੀ ਵਿਕਿਪੀਡਿਆ ਤਸਵੀਰ ਪਲੱਗਇਨ
 Name[pl]=Grafika na medal z Wikipedii dla kalendarzy
 Name[pt]='Plugin' de Imagem do Dia do Wikipédia para Calendários
 Name[pt_BR]=Plug-in de Imagem do Dia da Wikipedia para Calendários
@@ -39,6 +40,7 @@ Comment[ca]=Aquest connector proporciona la imatge del dia de la Viquipèdia
 Comment[da]=Dette plugin viser Dagens billede fra Wikipedia
 Comment[de]=Dieses Modul stellt das Bild des Tages aus Wikipedia zur Verfügung.
 Comment[el]=Αυτό το πρόσθετο προσφέρει την εικόνα της ημέρας της Wikipedia.
+Comment[es]=Este complemento provee la Imagen del Día de Wikipedia
 Comment[et]=See plugin näitab Wikipedia päevapilti
 Comment[fr]=Ce module externe fourni l'image du jour de Wikipédia
 Comment[gl]=Este engadido fornece a Imaxe do Dí­a da Wikipedia
