--- a/plugins/printing/journal/journalprint.desktop
+++ b/plugins/printing/journal/journalprint.desktop
@@ -33,7 +33,7 @@ Name[nds]=Daagbook-Druckstil
 Name[ne]=जर्नल मुद्रण शैली
 Name[nl]=Printstijl voor journaals
 Name[nn]=Utskriftsstil for dagbok
-Name[pa]=ਜਰਨਲ ਪਰਿੰਟ ਸਟਾਇਲ
+Name[pa]=ਜਰਨਲ ਪਰਿੰਟ ਸਟਾਈਲ
 Name[pl]=Styl drukowania dziennika
 Name[pt]=Estilo de Impressão em Diário
 Name[pt_BR]=Estilo de impressão de diário
