--- a/plugins/printing/list/listprint.desktop
+++ b/plugins/printing/list/listprint.desktop
@@ -33,7 +33,7 @@ Name[nds]=Listen-Druckstil
 Name[ne]=सूची मुद्रण शैली
 Name[nl]=Printstijl voor lijsten
 Name[nn]=Utskriftsstil for lister
-Name[pa]=ਲਿਸਟ ਪਰਿੰਟ ਸਟਾਇਲ
+Name[pa]=ਲਿਸਟ ਪਰਿੰਟ ਸਟਾਈਲ
 Name[pl]=Styl drukowania listy
 Name[pt]=Estilo de Impressão em Lista
 Name[pt_BR]=Estilo de impressão em lista
