--- a/plugins/printing/year/yearprint.desktop
+++ b/plugins/printing/year/yearprint.desktop
@@ -29,7 +29,7 @@ Name[nds]=Johrkalenner-Druckstil
 Name[ne]=वार्षिक मुद्रण शैली
 Name[nl]=Printstijl voor jaarkalender
 Name[nn]=Utskriftsstil for år
-Name[pa]=ਸਾਲਨਾ ਪਰਿੰਟ ਸਟਾਇਲ
+Name[pa]=ਸਾਲਨਾ ਪਰਿੰਟ ਸਟਾਈਲ
 Name[pl]=Styl drukowania roku
 Name[pt]=Estilo de Impressão em Anuário
 Name[pt_BR]=Estilo de impressão anual
@@ -71,6 +71,7 @@ Comment[nds]=Mit dit Moduul kannst Du en Kalenner för't hele Johr utdrucken.
 Comment[ne]=यो प्लगइनले तपाईँलाई वार्षिक क्यालेन्डर मुद्रण गर्न अनुमति दिन्छ ।
 Comment[nl]=Deze plugin maakt het mogelijk om een jaarkalender af te drukken.
 Comment[nn]=Dette programtillegget lèt deg skriva ut ein årleg kalender.
+Comment[pa]=ਇਹ ਪਲੱਗਇਨ ਤੁਹਾਨੂੰ ਸਾਲਨਾ ਕੈਲੰਡਰ ਪਰਿੰਟ ਕਰਨ ਲਈ ਸਹਾਇਕ ਹੈ।
 Comment[pl]=Ta wtyczka pozwala drukować roczny kalendarz.
 Comment[pt]=Este 'plugin' permite-lhe imprimir um calendário anual.
 Comment[pt_BR]=Esse plug-in permite-lhe imprimir um calendário anual.
