--- a/plugins/thisdayinhistory/thisdayinhistory.desktop
+++ b/plugins/thisdayinhistory/thisdayinhistory.desktop
@@ -37,6 +37,7 @@ Comment[ca]=Aquest connector proporciona els enllaços a les pàgines d'Efemèri
 Comment[da]=Dette plugin viser links til Wikipedias 'denne dag i historien'-sider
 Comment[de]=Dieses Modul stellt eine Verknüpfung auf „Dieser Tag in der Geschichte“ in Wikipedia zur Verfügung.
 Comment[el]=Αυτό το πρόσθετο προσφέρει δεσμούς στις σελίδες 'Αυτή η ημέρα στην Ιστορία' της Wikipedia
+Comment[es]=Este complemento provee un enlace a la página «Este día en la historia» de la Wikipedia
 Comment[et]=See plugin näitab Wikipedia 'täna ajaloos' lehekülgi
 Comment[fr]=Ce module externe fourni un lien vers la page « Ce jour dans l'histoire » de Wikipédia
 Comment[gl]=Este engadido fornece ligazóns ás páxinas "Este Dí­a na Historia" da Wikipedia
