--- a/dbuscalendar.desktop
+++ b/dbuscalendar.desktop
@@ -40,6 +40,7 @@ Comment[nds]=En Daagpleger mit en D-Bus-Koppelsteed
 Comment[ne]=D-Bus इन्टरफेसको आयोजक
 Comment[nl]=Organizer met een DBUS-interface
 Comment[nn]=Organiserar med eit D-Bus-grensesnitt
+Comment[pa]=ਡੀ-ਬੱਗ ਇੰਟਰਫੇਸ ਨਾਲ ਪਰਬੰਧਕ
 Comment[pl]=Organizator z interfejsem D-BUS
 Comment[pt]=Organizador com uma interface de D-BUS
 Comment[pt_BR]=Organizador com interface D-BUS
