--- a/kcmconfigs/korganizer_configcolorsandfonts.desktop
+++ b/kcmconfigs/korganizer_configcolorsandfonts.desktop
@@ -68,6 +68,7 @@ Comment[nb]=KOrganizer farge- og skriftoppsett
 Comment[nds]=KOrganizer sien Klören un Schriftoorden instellen
 Comment[nl]=Instellingen voor kleuren en lettertypen in KOrganizer
 Comment[nn]=Oppsett av fargar og skrifter i KOrganizer
+Comment[pa]=ਕੇ-ਪਰਬੰਧਕ ਰੰਗ ਅਤੇ ਫੋਂਟ ਸੰਰਚਨਾ
 Comment[pl]=Konfiguracja kolorów i czcionek KOrganizera
 Comment[pt]=Configuração de Cores e Tipos de Letra do KOrganizer
 Comment[pt_BR]=Configuração de fontes e cores do KOrganizer
