--- a/kcmconfigs/korganizer_configplugins.desktop
+++ b/kcmconfigs/korganizer_configplugins.desktop
@@ -104,6 +104,7 @@ Comment[nds]=Modulen för KOrganizer instellen
 Comment[ne]=केडीई आयोजक प्लगइन कन्फिगरेसन
 Comment[nl]=KOrganizer plugininstellingen
 Comment[nn]=Oppsett av KOrganizer-programtillegg
+Comment[pa]=ਕੇ-ਪਰਬੰਧਕ ਪਲੱਗਇਨ ਸੰਰਚਨਾ
 Comment[pl]=Konfiguracja wtyczek KOrganizera
 Comment[pt]=Configuração de 'Plugins' do KOrganizer
 Comment[pt_BR]=Configuração dos plug-ins do KOrganizer
