--- a/kcmconfigs/korganizer_configtime.desktop
+++ b/kcmconfigs/korganizer_configtime.desktop
@@ -70,6 +70,7 @@ Comment[nb]=KOrganizer oppsett av dato og klokkeslett
 Comment[nds]=KOrganizer sien Tieden un Daten instellen
 Comment[nl]=KOrganizer datum en tijd instellingen
 Comment[nn]=Oppsett av dato og klokkeslett i KOrganizer
+Comment[pa]=ਕੇ-ਪਰਬੰਧਕ ਟਾਈਮ ਅਤੇ ਮਿਤੀ ਸੰਰਚਨਾ
 Comment[pl]=Konfiguracja daty i czasu dla KOrganizera
 Comment[pt]=Configuração da Data e Hora no KOrganizer
 Comment[pt_BR]=Configuração de data e hora do KOrganizer
