--- a/plugins/printing/whatsnext/whatsnextprint.desktop
+++ b/plugins/printing/whatsnext/whatsnextprint.desktop
@@ -33,6 +33,7 @@ Name[nds]=Druckstil för "Wat kummt nu"-Indrääg
 Name[ne]=पछिल्लो मुद्रण शैली कुन हो
 Name[nl]=Printstijl voor Wat komt er nu
 Name[nn]=Utskriftsstil for «neste hendingar»
+Name[pa]=ਅੱਗੇ ਕੀ ਹੈ ਪਰਿੰਟ ਸਟਾਈਲ
 Name[pl]=Styl drukowania "Do dalej"
 Name[pt]=Estilo de Impressão "O Que Se Segue"
 Name[pt_BR]=Estilo de impressão "A seguir"
@@ -77,6 +78,7 @@ Comment[nds]=Mit dit Moduul kann en List vun de direktemang nakamen Begeefnissen
 Comment[ne]=यो प्लगइनले तपाईँलाई सबै पछि हुने घटना र गर्नुपर्ने कार्यको सूचीको मुद्रण गर्न अनुमति दिन्छ ।
 Comment[nl]=Deze plugin maakt het mogelijk om een lijst van alle komende evenementen en taken uit te printen.
 Comment[nn]=Dette programtillegget lèt deg skriva ut ei liste over alle dei kommande hendingane og oppgåvene i hugselista.
+Comment[pa]=ਇਹ ਪਲੱਗਇਨ ਤੁਹਾਨੂੰ ਸਭ ਆ ਰਹੇ ਈਵੈਟਾਂ ਅਤੇ ਟੂ-ਡੂ ਦੀ ਲਿਸਟ ਪਰਿੰਟ ਕਰਨ ਲਈ ਸਹਾਇਕ ਹੈ।
 Comment[pl]=Ta wtyczka pozwala wydrukować wszystkie przyszłe zdarzenia i zadania.
 Comment[pt]=Este 'plugin' permite-lhe imprimir uma lista com todos os eventos e itens por-fazer próximos.
 Comment[pt_BR]=Este plug-in permite-lhe imprimir uma lista de todos os próximos eventos e tarefas.
