SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.2/kdepim/; revision=914650

--- a/plugins/picoftheday/picoftheday.desktop
+++ b/plugins/picoftheday/picoftheday.desktop
@@ -55,6 +55,7 @@ Comment[nn]=Dette programtillegget viser dagens bilete frå Wikipedia.
 Comment[pl]=Wtyczka dostarcza Obrazek Dnia Wikipedii
 Comment[pt]=Este 'plugin' oferece a Imagem do Dia do Wikipédia
 Comment[pt_BR]=Este plug-in oferece a Imagem do Dia da Wikipedia
+Comment[sl]=Ta vstavek ponuja sliko dneva z Wikipedije
 Comment[sv]=Insticksprogrammet tillhandahåller Wikipedias 'Dagens bild'
 Comment[tr]=Bu eklenti Wikipedia'dan Günün Resmini getirir
 Comment[uk]=Цей додаток працює з «Зображеннями дня» з Вікіпедії
