add fine-grained categories (in compilance with freedesktop menu-spec) for my applications_fine-grained.menu -- to be published soon
svn path=/trunk/KDE/kdepim/; revision=915861

--- a/korganizer.desktop
+++ b/korganizer.desktop
@@ -135,4 +135,4 @@ X-KDE-ServiceTypes=DBUS/Organizer
 X-KDE-StartupNotify=true
 X-DBUS-StartupType=Unique
 X-DBUS-ServiceName=org.kde.korganizer
-Categories=Qt;KDE;Office;
+Categories=Qt;KDE;Office;Calendar;
