SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/kaddressbook/; revision=1007832

--- a/kcmconfigs/korganizer_configfreebusy.desktop
+++ b/kcmconfigs/korganizer_configfreebusy.desktop
@@ -19,7 +19,7 @@ Name[ca]=Lliure/ocupat
 Name[cs]=Aktivita
 Name[cy]=Rhydd/Prysur
 Name[da]=Fri/Optaget
-Name[de]=Frei/Beschäftigt
+Name[de]=Frei/Belegt
 Name[eo]=Libera/Okupita
 Name[es]=Libre/Ocupado
 Name[et]=Vaba/hõivatud
@@ -74,7 +74,7 @@ Comment[ca]=Configuració de Lliure/ocupat per a KOrganizer
 Comment[cs]=Nastavení aktivity pro KOrganizer
 Comment[cy]=Ffurfweddiad Rhydd/Prysur KTrefnydd
 Comment[da]=KOrganizer Fri/Optaget-indstilling
-Comment[de]=Frei/Beschäftigt-Festlegung für KOrganizer
+Comment[de]=Frei/Belegt-Festlegung für KOrganizer
 Comment[el]=Ρυθμίσεις KOrganizer Free/Busy
 Comment[eo]=KOrganizilo Agordo pri libero/okupito
 Comment[es]=Configuración de libre/ocupado de KOrganizer
