Move the KOMailClient class into the korganizer_eventviewer library, so it can be shared with korgac.
Refactor KOMailClient to be independent of the KOrganizer prefs.

svn path=/trunk/KDE/kdepim/; revision=1008992

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,7 +109,7 @@ endif(NOT KORG_NOPRINTER)
 
   ########### next target ###############
 
-  set(korganizer_eventviewer_LIB_SRCS koeventviewer.cpp urihandler.cpp koeventviewerdialog.cpp )
+  set(korganizer_eventviewer_LIB_SRCS koeventviewer.cpp urihandler.cpp koeventviewerdialog.cpp komailclient.cpp)
 
 
   qt4_add_dbus_interfaces(korganizer_eventviewer_LIB_SRCS org.kde.korganizer.Korganizer.xml)
@@ -196,7 +196,6 @@ endif(NOT KORG_NOPRINTER)
     koviewmanager.cpp
     kodialogmanager.cpp
     archivedialog.cpp
-    komailclient.cpp
     koincidenceeditor.cpp
     koeventeditor.cpp
     kotodoeditor.cpp
