--- a/korgac/CMakeLists.txt
+++ b/korgac/CMakeLists.txt
@@ -29,7 +29,7 @@ kde4_add_app_icon(korgac_SRCS "${KDE4_ICON_DIR}/oxygen/*/apps/korgac.png")
 
 kde4_add_executable(korgac ${korgac_SRCS})
 
-target_link_libraries(korgac ${LIBKNOTIFICATIONITEM-1_LIBRARIES} ${KDE4_KDEUI_LIBS} ${KDE4_PHONON_LIBS} ${KDEPIMLIBS_KCAL_LIBS} korganizer_eventviewer korganizer_core)
+target_link_libraries(korgac ${LIBKNOTIFICATIONITEM-1_LIBRARIES} ${KDE4_KDEUI_LIBS} ${KDE4_PHONON_LIBS} ${KDEPIMLIBS_KCAL_LIBS} ${KDEPIMLIBS_KPIMIDENTITIES_LIBS} korganizer_eventviewer korganizer_core)
 
 install(TARGETS korgac ${INSTALL_TARGETS_DEFAULT_ARGS})
 
