SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/; revision=1015054

--- a/dbuscalendar.desktop
+++ b/dbuscalendar.desktop
@@ -37,6 +37,7 @@ Comment[nl]=Organizer met een DBUS-interface
 Comment[nn]=Organiserar med eit D-Bus-grensesnitt
 Comment[pt]=Organizador com uma interface de D-Bus
 Comment[pt_BR]=Organizador com interface D-Bus
+Comment[ro]=Organizator cu interfață D-Bus
 Comment[ru]=Органайзер с интерфейсом D-Bus
 Comment[sv]=Filofax med D-Bus gränssnitt
 Comment[tr]=D-BUS arayüzü kullanan Düzenleyici
