SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/; revision=1015342

--- a/korganizer-import.desktop
+++ b/korganizer-import.desktop
@@ -83,7 +83,7 @@ GenericName[bg]=Организатор
 GenericName[ca]=Organitzador personal
 GenericName[cs]=Osobní organizér
 GenericName[cy]=Trefnydd Personol
-GenericName[da]=Personlig organisering
+GenericName[da]=Personlig planlægningskalender
 GenericName[de]=Persönliche Daten organisieren
 GenericName[el]=Προσωπικός οργανωτής
 GenericName[en_GB]=Personal Organiser
