SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/; revision=1022720

--- a/plugins/printing/whatsnext/whatsnextprint.desktop
+++ b/plugins/printing/whatsnext/whatsnextprint.desktop
@@ -16,7 +16,7 @@ Name[fi]=Mitä seuraavaksi -tulostustyyli
 Name[fr]=Impression des évènements à venir
 Name[fy]=Printstyl foar Wat komt der no
 Name[ga]=Priontáil Rudaí Le Teacht
-Name[gl]=Estilo de Impresión do Quen Ven Agora
+Name[gl]=Estilo de Impresión do Que Ven Agora
 Name[hu]=A közeljövő eseményeinek kinyomtatása
 Name[is]=Hvað er næst prentstíll
 Name[it]=Stile di stampa "cosa viene dopo"
