--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 project(korganizer)
 
+find_package( Akonadi REQUIRED )
+
 #
 # The following macros can be defined to alter KOrganizer behavior.
 # (if desired, use add_definitions() to define them)
@@ -17,11 +19,6 @@ option(KORG_NODND "Turn-off the ability to drag-and-drop incidences in the views
 #                No idea why you would want to define this, perhaps to save
 #                screen real estate? But there are a config options for that.
 option(KORG_NODECOS "Turn-off decoration plugins in views." FALSE)
-#
-# KORG_NOPRINTER - turns-off printing support. Useful if KOrganizer is used
-#                  in a situation where no printers would be accessible.
-#
-option(KORG_NOPRINTER "Turn-off printing support." FALSE)
 
 # add C++ macro definitions for options passed to CMake
 if(KORG_NOARCHIVE)
@@ -33,10 +30,9 @@ endif(KORG_NODND)
 if(KORG_NODECOS)
   add_definitions(-DKORG_NODECOS)
 endif(KORG_NODECOS)
-if(KORG_NOPRINTER)
-  add_definitions(-DKORG_NOPRINTER)
-endif(KORG_NOPRINTER)
 
+# enable exception handling
+set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${KDE4_ENABLE_EXCEPTIONS}" )
 
 if(KMAIL_SUPPORTED)
 #TODO: make korganizer buildable without kmail (i.e. w/o the kmail dbus stuff)
@@ -50,13 +46,12 @@ if(KMAIL_SUPPORTED)
                       ${CMAKE_SOURCE_DIR}/korganizer/printing
                       ${CMAKE_SOURCE_DIR}/kdgantt1
                       ${CMAKE_BINARY_DIR}/libkdepim
+                      ${AKONADI_INCLUDE_DIR}
+                      ${Boost_INCLUDE_DIRS}
                       ${QT_INCLUDES} ${ZLIB_INCLUDE_DIR} )
 
   add_definitions (-DQT3_SUPPORT -DQT3_SUPPORT_WARNINGS)
 
-if(NOT KORG_NOPRINTER)
-  add_subdirectory( printing )
-endif(NOT KORG_NOPRINTER)
   add_subdirectory( korgac )
   add_subdirectory( pixmaps )
   add_subdirectory( sounds )
@@ -80,7 +75,7 @@ endif(NOT KORG_NOPRINTER)
 
   kde4_add_executable(korganizer ${korganizer_SRCS})
 
-  target_link_libraries(korganizer ${KDE4_KDEUI_LIBS} ${KDE4_KDE3SUPPORT_LIBRARY} ${KDE4_KPARTS_LIBRARY} ${KDEPIMLIBS_KCAL_LIBS} ${KDEPIMLIBS_KHOLIDAYS_LIBS} kdepim korganizerprivate korganizer_core korganizer_calendar korganizer_interfaces)
+  target_link_libraries(korganizer ${KDE4_KDEUI_LIBS} ${KDE4_KDE3SUPPORT_LIBRARY} ${KDE4_KPARTS_LIBRARY} ${KDEPIMLIBS_KCAL_LIBS} ${KDEPIMLIBS_KHOLIDAYS_LIBS} kdepim korganizerprivate korganizer_interfaces)
 
   install(TARGETS korganizer ${INSTALL_TARGETS_DEFAULT_ARGS})
 
@@ -91,7 +86,11 @@ endif(NOT KORG_NOPRINTER)
 
   kde4_add_plugin(kcm_korganizer ${kcm_korganizer_PART_SRCS})
 
-  target_link_libraries(kcm_korganizer ${QT_QT3SUPPORT_LIBRARY} ${KDE4_KDEUI_LIBS} ${KDEPIMLIBS_KCAL_LIBS} ${KDEPIMLIBS_KHOLIDAYS_LIBS} korganizerprivate kdepim korganizer_core korganizer_calendar)
+  target_link_libraries(kcm_korganizer
+    ${QT_QT3SUPPORT_LIBRARY}
+    ${KDE4_KDEUI_LIBS}
+    ${KDEPIMLIBS_KCAL_LIBS} ${KDEPIMLIBS_KHOLIDAYS_LIBS} ${KDEPIMLIBS_AKONADI_LIBS}
+    korganizerprivate kdepim )
 
   install(TARGETS kcm_korganizer  DESTINATION ${PLUGIN_INSTALL_DIR})
 
@@ -102,7 +101,7 @@ endif(NOT KORG_NOPRINTER)
 
   kde4_add_plugin(korganizerpart ${korganizerpart_PART_SRCS})
 
-  target_link_libraries(korganizerpart ${KDE4_KDECORE_LIBS} ${KDE4_KPARTS_LIBS} ${KDEPIMLIBS_KCAL_LIBS} korganizerprivate korganizer_core korganizer_calendar korganizer_interfaces)
+  target_link_libraries(korganizerpart ${KDE4_KDECORE_LIBS} ${KDE4_KPARTS_LIBS} ${KDEPIMLIBS_KCAL_LIBS} korganizerprivate korganizer_interfaces)
 
   install(TARGETS korganizerpart  DESTINATION ${PLUGIN_INSTALL_DIR})
 
@@ -123,32 +122,6 @@ endif(NOT KORG_NOPRINTER)
 
   set_target_properties(korganizer_eventviewer PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION} )
   install(TARGETS korganizer_eventviewer ${INSTALL_TARGETS_DEFAULT_ARGS})
-
-
-  ########### next target ###############
-
-  set(korganizer_calendar_LIB_SRCS stdcalendar.cpp )
-
-  kde4_add_library(korganizer_calendar SHARED ${korganizer_calendar_LIB_SRCS})
-
-  target_link_libraries(korganizer_calendar ${KDE4_KPARTS_LIBS} ${KDEPIMLIBS_KCAL_LIBS} ${KDE4_KDE3SUPPORT_LIBS} kdepim)
-
-  set_target_properties(korganizer_calendar PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION} )
-  install(TARGETS korganizer_calendar ${INSTALL_TARGETS_DEFAULT_ARGS})
-
-
-  ########### next target ###############
-
-  set(korganizer_core_LIB_SRCS koprefs.cpp kocore.cpp kohelper.cpp koidentitymanager.cpp cellitem.cpp)
-
-  kde4_add_kcfg_files(korganizer_core_LIB_SRCS koprefs_base.kcfgc )
-
-  kde4_add_library(korganizer_core SHARED ${korganizer_core_LIB_SRCS})
-
-  target_link_libraries(korganizer_core ${KDE4_KDE3SUPPORT_LIBS} ${KDE4_KMIME_LIBRARY} kdepim)
-
-  set_target_properties(korganizer_core PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION} )
-  install(TARGETS korganizer_core ${INSTALL_TARGETS_DEFAULT_ARGS})
 
 
   ########### next target ###############
@@ -219,7 +192,6 @@ endif(NOT KORG_NOPRINTER)
     statusdialog.cpp
     koglobals.cpp
     actionmanager.cpp
-    resourceview.cpp
     navigatorbar.cpp
     kogroupware.cpp
     history.cpp
@@ -233,10 +205,21 @@ endif(NOT KORG_NOPRINTER)
     kocorehelper.cpp
     incidencechanger.cpp
     koattendeeeditor.cpp
-    templatemanagementdialog.cpp )
+    templatemanagementdialog.cpp
+    stdcalendar.cpp
+    koprefs.cpp kocore.cpp kohelper.cpp koidentitymanager.cpp cellitem.cpp
+    akonadicalendar.cpp
+    akonadicollectionview.cpp
+    printing/calprinter.cpp
+    printing/calprintpluginbase.cpp
+    printing/calprintdefaultplugins.cpp
+  )
 
-
-  kde4_add_ui_files(korganizerprivate_LIB_SRCS filteredit_base.ui koeditoralarms_base.ui publishdialog_base.ui template_management_dialog_base.ui kogroupwareprefspage.ui searchdialog_base.ui timescaleedit_base.ui)
+  kde4_add_kcfg_files(korganizerprivate_LIB_SRCS koprefs_base.kcfgc )
+  kde4_add_ui_files(korganizerprivate_LIB_SRCS
+    filteredit_base.ui koeditoralarms_base.ui publishdialog_base.ui template_management_dialog_base.ui kogroupwareprefspage.ui searchdialog_base.ui timescaleedit_base.ui
+    printing/calprintincidenceconfig_base.ui printing/calprintdayconfig_base.ui printing/calprintmonthconfig_base.ui printing/calprinttodoconfig_base.ui printing/calprintweekconfig_base.ui
+  )
 
   qt4_add_resources(korganizerprivate_LIB_SRCS agendaitem_pixmaps/agendaitemtheme.qrc )
 
@@ -253,7 +236,8 @@ endif(NOT KORG_NOPRINTER)
     ${KDE4_KNEWSTUFF2_LIBS} ${KDE4_KUTILS_LIBS}  ${KDE4_KDE3SUPPORT_LIBS} ${ZLIB_LIBRARY}
     ${KDEPIMLIBS_KCAL_LIBS} ${KDEPIMLIBS_KABC_LIBS} ${KDEPIMLIBS_KPIMIDENTITIES_LIBRARY} ${KDE4_KMIME_LIBRARY}
     ${KDEPIMLIBS_KHOLIDAYS_LIBS}
-    korganizer_core korganizer_eventviewer korganizer_calendar korganizer_interfaces korg_stdprinting
+    ${KDEPIMLIBS_AKONADI_LIBS}
+    korganizer_eventviewer korganizer_interfaces
     kdepim
   )
 
