--- a/korganizerui.rc
+++ b/korganizerui.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui>
-<kpartgui name="korganizer" version="411">
+<kpartgui name="korganizer" version="414">
 
   <MenuBar>
     <Menu name="file"><text>&amp;File</text>
@@ -118,10 +118,10 @@
     <Action name="new_event"/>
     <Action name="new_todo"/>
     <Action name="new_journal"/>
-    <Action name="file_print"/>
-    <Action name="mail_appointment"/>
+    <!--
     <Separator/>
     <Action name="edit_find"/>
+    -->
     <Separator/>
     <Action name="go_previous"/>
     <Action name="go_next"/>
@@ -157,5 +157,24 @@
     <Action name="edit_paste"/>
     <Merge/>
   </Menu>
+
+  <Menu name="akonadi_collectionview_contextmenu">
+    <!--
+    <Action name="akonadi_collection_create"/>
+    <Separator/>
+    <Action name="akonadi_collection_copy"/>
+    <Action name="akonadi_paste"/>
+    <Separator/>
+    <Action name="akonadi_collection_delete"/>
+    <Separator/>
+    <Action name="akonadi_collection_sync"/>
+    <Separator/>
+    -->
+    <Action name="akonadi_calendar_create"/>
+    <Action name="akonadi_calendar_delete"/>
+    <Separator/>
+    <Action name="akonadi_collection_properties"/>
+
+</Menu>
 
 </kpartgui>
